fix: correct spacing in prose image styles for consistency

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -234,8 +234,8 @@ html[data-keyboard-focus] .prose a:not([data-footnote-backref]):focus-visible {
   background-size: 100% 1px;
 }
 
-.prose p:not(.image-block)>img,
-.prose p:not(.image-block)>a>img {
+.prose p:not(.image-block) > img,
+.prose p:not(.image-block) > a > img {
   display: inline-block;
   margin: 0 0.15em;
   vertical-align: middle;
@@ -251,7 +251,7 @@ html[data-keyboard-focus] .prose a:not([data-footnote-backref]):focus-visible {
     background-size: 0 1px;
   }
 
-  .prose p:not(.image-block)>a:not(:has(> img:only-child))>img {
+  .prose p:not(.image-block) > a:not(:has(> img:only-child)) > img {
     display: revert;
     margin: revert;
     vertical-align: revert;
@@ -262,8 +262,8 @@ html[data-keyboard-focus] .prose a:not([data-footnote-backref]):focus-visible {
   text-align: center;
 }
 
-.prose p.image-block>img,
-.prose p.image-block>a>img {
+.prose p.image-block > img,
+.prose p.image-block > a > img {
   display: block;
   margin: 2em auto;
 }
@@ -289,6 +289,7 @@ pre[data-lang]::before {
   font-weight: 700;
   line-height: 1;
   font-family: "Google Sans Flex", var(--font-sans);
+  font-style: normal;
   text-transform: uppercase;
   color: #fff;
   opacity: 0.1;
